# easyalias

./: LICENSE  README.md  package-lock.json  package.json
docs/: ARCHITECTURE.md
linux_export/: EasyAlias_0.1.0_arm64.deb  README.md
linux_src/: .gitignore  README.md  index.html  vite.config.ts
linux_src/docs/: ARCHITECTURE.md
linux_src/src/: main.ts
linux_src/src-tauri/: Cargo.toml  tauri.conf.json
linux_src/src-tauri/src/: main.rs
mac_src/: README.md  index.html  vite.config.ts
mac_src/docs/: ARCHITECTURE.md
mac_src/src/: main.ts  styles.css
mac_src/src-tauri/: tauri.conf.json
mac_src/src-tauri/icons/: icon.icns
mac_src/src-tauri/src/: main.rs
src/: main.ts  styles.css
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
windows_export/: EasyAlias_0.1.0_x64-setup.tar
windows_src/: README.md  package-lock.json
windows_src/docs/: ARCHITECTURE.md
windows_src/src/: main.ts  styles.css
windows_src/src-tauri/: Cargo.toml  tauri.conf.json
windows_src/src-tauri/src/: main.rs
