[package]
name = "easyalias"
version = "0.1.0"
description = "A tiny macOS alias manager"
authors = ["hannesgnann"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
